4-external-services/kustomize/proxmox-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-endpoint
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.50.252
    ports:
      - port: 8006
