4-external-services/kustomize/proxmox-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox-service
  namespace: external-services
spec:
  ports:
    - port: 80
      targetPort: 8006
  type: ClusterIP
