4-external-services/kustomize/svc-proxmox.yaml
kind: Service
apiVersion: v1
metadata:
  name: proxmox
  namespace: external-services
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8006
      name: proxmox-http
---
kind: Endpoints
apiVersion: v1
metadata:
  name: proxmox
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.50.252
    ports:
      - protocol: TCP
        port: 8006
        name: http
