4-external-services/kustomize/truenas-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas-service
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.50.201
    ports:
      - port: 80
