4-external-services/kustomize/truenas-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: truenas-service
  namespace: external-services
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
