4-external-services/kustomize/proxmox-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox
  namespace: external-services
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.proxmox.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: proxmox-service
          port: 8006
    - match: Host(`proxmox.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: proxmox-service
          port: 8006
      middlewares:
        - name: default-headers
  tls:
    secretName: russellhost-tls
